# event_streaming

./: .gitignore  DECISIONLOG.md  README.md  application.conf  create-topics.sh  dataset_sorter.js  docker-compose-consumers.yml  docker-compose-db.yml  docker-compose-kafka.yml  docker-compose-ksqldb.yml  docker-compose-redis.yml  docker-compose-services.yml  docker-compose-workers.yml  docker-compose.yml
assets/: dataset_1.json  dataset_2.json  dataset_3.json  dataset_4.json  dataset_5.json  dataset_6.json
go-consumer/: go.mod  go.sum  main.go
go-consumer/database/: database.go
go-consumer/kafka/: consumer.go  producer.go
go-consumer/worker/: worker.go
go-consumers/: main.go
go-kafka/: go.mod
go-server/: go.mod  go.sum  main.go
go-server/database/: database.go
go-server/kafka/: producer.go
go-server/message/: message.go
go-worker/: Dockerfile  go.mod  go.sum  main.go  pool.go
go-worker/database/: database.go
go-worker/kafka/: consumer.go  (+1 more)
python-consumers/: analytics_consumer.py  consumer-2.py  consumer.py
rust-consumer/: Cargo.toml
rust-consumer/src/: app_state.rs  consumer.rs  event.rs  lib.rs  main.rs  producer.rs  receiver.rs  server.rs  transmitter.rs  worker.rs
rust-consumer/src/channel/: channel.rs  mod.rs  receiver.rs  transmitter.rs
rust-consumer/src/kafka/: consumer.rs  producer.rs
rust-consumer/src/models/: event.rs  mod.rs  priority.rs  routine_type.rs
scripts/: create-topics.sh
simulator/: simulator.py
sql/: create_database.sql  create_streams.sql  create_tables.sql  fill_tables.sql
workers/: Cargo.toml  Dockerfile
(+7 files in other folders)
