[package]
name = "workers"
version = "0.1.0"
edition = "2021"


[[bin]]
path = "src/main.rs"
name = "workers"

[dependencies]
chrono = "0.4.38"
crossbeam-channel = "0.5.13"
dotenv = "0.15.0"
kafka = "0.10.0"
postgres = "0.19.8"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
rand = "0.8.5"
rdkafka = "0.36.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
tokio = "1.40.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = {versin = "1.10.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]}
warp = "0.3.7"
